Chore: yml gateway.ip 추가 #KOK-88

--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -1,7 +1,6 @@
 eureka:
   client:
-    register-with-eureka: true
-    fetch-registry: true
+
     service-url:
       defaultZone: http://eureka-service:9001/eureka
 
@@ -14,3 +13,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+gateway:
+  ip: 172.18.0.254
