--- a/product-service.yml
+++ b/product-service.yml
@@ -4,6 +4,9 @@ server:
 eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
 
 spring:
   application:
@@ -13,3 +16,6 @@ logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
+
+gateway:
+  ip: 172.18.0.254
