--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -1,5 +1,7 @@
 eureka:
   client:
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://localhost:9001/eureka
 
