--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -1,10 +1,13 @@
 eureka:
   client:
-
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://eureka-service:9001/eureka
 
 spring:
+  application:
+    name: order-service
   rabbitmq:
     host: rabbitmq
     port: 5672
