Fix: prod 프로파일에 application.name 추가 #KOK-88

--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -7,7 +7,7 @@ eureka:
 
 spring:
   application:
-    name: order-service
+    name: product-service
   rabbitmq:
     host: rabbitmq
     port: 5672
