--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -8,6 +8,16 @@ eureka:
 spring:
   application:
     name: product-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DATASOURCE_URL}
+    slave-list:
+      - name: slave-1
+        url: ${SLAVE_1_URL}
+      - name: slave-2
+        url: ${SLAVE_2_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   rabbitmq:
     host: rabbitmq
     port: 5672
