Chore: Actuator 설정 #KOK-88

--- a/member-service.yml
+++ b/member-service.yml
@@ -16,3 +16,9 @@ logging:
 
 gateway:
   ip: 172.18.0.254
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busresfresh, beans
