--- a/member-service-prod.yml
+++ b/member-service-prod.yml
@@ -16,14 +16,14 @@ spring:
       ddl-auto: create
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DATASOURCE_URL}
+    url:
     slave-list:
       - name: slave-1
-        url: ${SLAVE_1_URL}
+        url:
       - name: slave-2
-        url: ${SLAVE_2_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+        url:
+    username: 
+    password:
 
 gateway:
   ip: 172.18.0.254
