Chore: datasource 환경변수 처리 #KOK-88

--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -8,6 +8,16 @@ eureka:
 spring:
   application:
     name: product-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DATASOURCE_URL}
+    slave-list:
+      - name: slave-1
+        url: ${DATASOURCE_SLAVE-1_URL}
+      - name: slave-2
+        url: ${DATASOURCE_SLAVE-2_URL}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
   rabbitmq:
     host: rabbitmq
     port: 5672
