--- a/member-service-prod.yml
+++ b/member-service-prod.yml
@@ -16,14 +16,14 @@ spring:
       ddl-auto: create
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url:
+    url: ${DATASOURCE_URL}
     slave-list:
       - name: slave-1
-        url:
+        url: ${DATASOURCE_SLAVE-1_URL}
       - name: slave-2
-        url:
-    username:
-    password:
+        url: ${DATASOURCE_SLAVE-2_URL}
+      username: ${DATASOURCE_USERNAME}
+      password: ${DATASOURCE_PASSWORD}
 
 gateway:
   ip: 172.18.0.254
