--- a/member-service-prod.yml
+++ b/member-service-prod.yml
@@ -15,7 +15,7 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: ${DATASOURCE_DRIVER_NAME}
     url: ${DATASOURCE_URL}
     slave-list:
       - name: slave-1
