--- a/member-service-prod.yml
+++ b/member-service-prod.yml
@@ -8,15 +8,15 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    driver-class-name: ${DATASOURCE_DRIVER_CLASS_NAME}
-    url: ${DATASOURCE_URL}
+    driver-class-name: \${DATASOURCE_DRIVER_CLASS_NAME}
+    url: \${DATASOURCE_URL}
     slave-list:
       - name: slave-1
-        url: ${DATASOURCE_SLAVE-1_URL}
+        url: \${DATASOURCE_SLAVE-1_URL}
       - name: slave-2
-        url: ${DATASOURCE_SLAVE-2_URL}
-      username: ${DATASOURCE_USERNAME}
-      password: ${DATASOURCE_PASSWORD}
+        url: \${DATASOURCE_SLAVE-2_URL}
+      username: \${DATASOURCE_USERNAME}
+      password: \${DATASOURCE_PASSWORD}
 
 gateway:
   ip: 172.18.0.254
